<?xml version="1.0"?>
<package format="2">
    <name>fpl2bag</name>
    <version>1.0.0</version>
    <description>The fpl2bag package</description>
    <maintainer email="support@fixposition.com">Fixposition Support</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/fixposition/fixposition_utility/</url>
    <buildtool_depend>catkin</buildtool_depend>
    <export>
    </export>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rosbag</depend>
    <depend>topic_tools</depend>
    <depend>std_msgs</depend>
</package>
